# Real-Time-Rendering

./: .gitmodules  CMakeLists.txt
5-Shading-Basics/: CMakeLists.txt  gooch-shading.cpp  phong-shading.cpp  punctual-lights.cpp
5-Shading-Basics/shaders/: gooch-shading.frag  gooch-shading.vert  phong-shading.frag  phong-shading.vert
common/: Camera.hpp  Defines.hpp  Loader.hpp  Program.hpp  template.cpp
submodules/: CMakeLists.txt
